Work in progress commit for removing unwanted loop iterations
Current implementation traverses an index range loop from its
beginning to ends and ignore non-conforming indexes. A better
implementation should use additional restrictions to modify the
iteration start and end conditions to avoid such unused iterations
all together.

--- a/MultiCoreBackEnd/Makefile
+++ b/MultiCoreBackEnd/Makefile
@@ -54,7 +54,7 @@ LEXFLAGS = -d
 YACCFLAGS = -dvty
 
 # Link with standard c library, math library, and lex library
-LIBS = -lc -lm -lfl
+LIBS = -lc -lm -lfl -pthread
 
 # Link with POSIX thread library
 BUILD_LIBS = -pthread
