Finished implementation of hoisting loop iteration bounds up to their proper place
This gave a lot of trouble, but I think the current implementation covers all the
corner cases. There are chances of optimizations though. I added a lot of comments
on the code that addresses loop-index-reordering in general to make optimization
easy for later developers.

--- a/MultiCoreBackEnd/Makefile
+++ b/MultiCoreBackEnd/Makefile
@@ -100,6 +100,7 @@ depend:
 
 clean:
 	rm -f $(JUNK) y.output $(PRODUCTS) $(BUILD_LOGS)
+	rm -rf ./build/*.h ./build/*.cc
 
 # make build will compile and generate executable for any IT program compiled by the IT compiler 
 build: $(BUILD_OBJS)
