enabled the segmented-memory backend compiler to be installed too

--- a/config/compiler.properties
+++ b/config/compiler.properties
@@ -1,6 +1,6 @@
-# properties to enable the IT compilers one wants to install (value is true/false)
+# properties to enable the backend IT compilers one wants to install, either [true/false]
 multicore.backend.enabled=true
-segmented.memory.backend.enabled=false
+segmented.memory.backend.enabled=true
 
 # properties that tells which back-end C++ compilers to use for different IT compilers
 multicore.backend.c.compiler=g++
