signifant new features have been added to the project for GPU LPU offloading

--- a/helper-projects/GpuOffloading/makefile
+++ b/helper-projects/GpuOffloading/makefile
@@ -17,9 +17,9 @@ CUDA_SRCS = $(shell find . -name "*.cu" -path "./gpu*")
 
 # C++ and CUDA object files
 C_OBJS = $(patsubst %.cc, %.o, $(filter %.cc,$(C_SRCS)))
-CUDA_OBJS = $(patsubst %.cu, %.co, $(filter %.cu,$(CUDA_SRCS)))
+CUDA_OBJS = $(patsubst %.cu, %.o, $(filter %.cu,$(CUDA_SRCS)))
 
-SRC_JUNK = ./*.o ./*/*.o ./*.co ./*/*.co ./*/*/*.co
+SRC_JUNK = ./*.o ./*/*.o ./*/*/*.o gpuCode.obj
 
 # Define the tools we are going to use
 CXX= $(C_COMPILER)
@@ -33,8 +33,11 @@ NVCC = $(CUDA_COMPILER)
 # settings for unoptimized code generation
 CPPFLAGS = -g -Wall -fno-inline -Wno-unused -Wno-sign-compare -O0
 
+# settings for CUDA compiler
+CUDAFLAGS= -x cu -dc
+
 # settings for newer GPGPU target hardwares 
-GPUARCH = sm_30 
+GPUARCH = sm_30
 
 # Link with standard c library, math library, and the CUDA library
 LIBS = -lc -lm -lcudart
@@ -46,11 +49,14 @@ LIBS = -lc -lm -lcudart
 %.o: %.cc
 	$(CXX) $(CPPFLAGS) -c $*.cc -o $@
 
-%.co: %.cu
-	$(NVCC) -arch=$(GPUARCH) -c $*.cu -o $@
+%.o: %.cu
+	$(NVCC) -arch=$(GPUARCH) $(CUDAFLAGS) -c $*.cu -o $@
 
-$(EXECUTABLE): $(C_OBJS) $(CUDA_OBJS)
-	$(LD) -o $@ $(C_OBJS) $(CUDA_OBJS) $(LIBS)
+gpuCode.obj: $(CUDA_OBJS)
+	$(NVCC) -arch=$(GPUARCH) -dlink $(CUDA_OBJS) -o $@
+
+$(EXECUTABLE): $(C_OBJS) gpuCode.obj
+	$(LD) -o $@ $(C_OBJS) $(CUDA_OBJS) $(LIBS) gpuCode.obj
 
 clean:
 	rm -f $(SRC_JUNK) 
