--- a/compilers/multicore-backend/MakeFile-Compiler
+++ b/compilers/multicore-backend/MakeFile-Compiler
@@ -9,7 +9,7 @@ default: $(PRODUCTS)
 C_COMPILER=g++
 
 # Set up the list of source and object files
-SRCS = $(shell find src ! -name "hashtable.cc" -name "*.cc" -not -path "./build/*")
+SRCS = $(shell find src ! -name "hashtable.cc" -name "*.cc")
 
 # OBJS can deal with either .cc or .c files listed in SRCS
 OBJS = y.tab.o lex.yy.o $(patsubst %.cc, %.o, $(filter %.cc,$(SRCS))) $(patsubst %.c, %.o, $(filter %.c, $(SRCS)))
